# rf_detr_onnx_test

./: Cargo.toml  README.md
assets/: styles.css
src/: coco_classes.rs  gui.rs  lib.rs  main.rs
