[package]
name = "rf_detr_onnx_test"
version = "0.1.0"
edition = "2021"

[lib]
name = "rf_detr_onnx_test_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.25.6"
ort = "1.16.0"
ndarray = "0.15.6"
anyhow = "1.0.98"
imageproc = "0.24.0"
rusttype = "0.9.3"
eframe = "0.32.0"
egui = "0.32.0"
rfd = "0.15.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
